--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,1 +1,6 @@
-{"errorId":"ce1578cd-ff36-4bd0-9e83-eec38a006b1d","name":"ValidationError","debugMessage":"Must specify table and id.","message":"Something went wrong. (400)"}
+{
+"errorId": "5348858c-b194-41ee-b456-40177886e2c2",
+"name": "ValidationError",
+"debugMessage": "User does not have access.",
+"message": "Something went wrong. (400)"
+}
